--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
 body {
-    padding: 15px;
+    margin: 0;
+    padding: 0;
 }
 
 .content {
     display: flex;
-    gap: 20px;
+    justify-content: space-around;
+    background-color: cornsilk;
+    padding: 50px 15px;
 }
 
 .movie {
     max-width: 30%;
     border: 1px solid rgba(0, 0, 0, 0.2);
-    margin-bottom: 20px;
     border-radius: 9px;
     box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: column;
+    background-color: #fff;
 }
 
 .movieImg {
